--- a/SITE_IPHONE/CSS/style.css
+++ b/SITE_IPHONE/CSS/style.css
@@ -74,6 +74,72 @@
     margin-bottom: 15px;
 }
 
+#modelos  .container {
+    display: grid; /*transformar elemento em grid*/
+    grid-template-columns: repeat(4, 1fr); /*repeat: função de repetição; cada coluna tem uma fração do grid*/
+    gap: 40px; /*distancia entre as colunas; gap é uma propriedade especifica para grid ou flex*/
+    margin-bottom: 50px;
+}
+
+#modelos .container div img {
+    display: block;
+    height: 300px;
+    margin-bottom: 30px;
+}
+
+#modelos .container ul {
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+
+#modelos .container h3 {
+    margin-bottom: 20px;
+}
+
+#modelos .but-comprar {
+    background-color: #06C;
+    display: block;
+    padding: 10px 20px;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 30px;
+}
+
+#modelos .but-comprar:hover {
+    box-shadow: 0px 0px 10px #09c; /*efeito de somra*/
+    /* background-color: #09c; */
+    /* transition: all .3s linear; */
+}
+
+#fotos .container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+#fotos .container img{
+    display: block;
+    width: 100%; /*ocupar 100% da largura do elemento pai (grid)*/
+    transition: all 0.3s linear;
+}
+
+#fotos .container img:hover{
+    transform: scale(0.95); /*reduzir a escala da imagem*/
+}
+
+#videos .container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    margin-bottom: 50px;
+}
+
+#videos .container iframe {
+    width: 100%; /*iframe já é um bloco, diferentemente da imagem*/
+}
+
 #rodape {
     background-color: #000;
     padding: 30px;
